@@ -63,6 +63,7 @@ ACE_TMAIN(int argc, ACE_TCHAR** argv)
     task.wait();
 
     // Clean-up!
+    ACE_DEBUG((LM_INFO, ACE_TEXT("(%P|%t)    <- PUBLISHER SHUTDOWN\n")));
     TheServiceParticipant->shutdown();
   }
   catch (const CORBA::Exception& e)
